package org.example.fuzzy.quantifier;

import org.example.fuzzy.set.FuzzySet;

public class AbsoluteQuantifier extends Quantifier {

    public AbsoluteQuantifier(String name, FuzzySet fuzzySet) {
        super(name, fuzzySet);
    }
}
