package org.example.fuzzy.quantifier;

import org.example.fuzzy.set.FuzzySet;

public class RelativeQuantifier extends Quantifier {

    public RelativeQuantifier(String name, FuzzySet fuzzySet) {
        super(name, fuzzySet);
    }
}
