@startuml

!theme plain
top to bottom direction
skinparam linetype ortho

class ClassicSet {
  - minBound: double
  - maxBound: double
  - discreteElements: Set<Double>
  - isContinuous: boolean
  + ClassicSet(double, double)
  + ClassicSet(Set<Double>)
  + contains(double): boolean
  + getMinBound(): double
  + getMaxBound(): double
  + getDiscreteElements(): Set<Double>
  + isContinuous(): boolean
}

class FuzzySet {
  - universe: ClassicSet
  - membershipFunction: MembershipFunction
  + FuzzySet(ClassicSet, MembershipFunction)
  + getMembership(double): double
  + union(FuzzySet): FuzzySet
  + intersect(FuzzySet): FuzzySet
  + complement(): FuzzySet
  + getUniverse(): ClassicSet
  + getMembershipFunction(): MembershipFunction
  + isEmpty(): boolean
  + isConvex(): boolean
  + getHeight(): double
  + isNormal(): boolean
  + getSupport(): ClassicSet
  + getAlphaCut(double): ClassicSet
}

interface MembershipFunction << interface >> {
  + getMembership(double): double
}

class GaussianMembershipFunction {
  + GaussianMembershipFunction(double, double)
  + getMembership(double): double
  + getMean(): double
  + getSigma(): double
}

class TrapezoidalMembershipFunction {
  + TrapezoidalMembershipFunction(double, double, double, double)
  + getMembership(double): double
  + getA(): double
  + getB(): double
  + getC(): double
  + getD(): double
}

class TriangularMembershipFunction {
  + TriangularMembershipFunction(double, double, double)
  + getMembership(double): double
  + getA(): double
  + getB(): double
  + getC(): double
}

abstract class Quantifier {
  # name: String
  # fuzzySet: FuzzySet
  + Quantifier(String, FuzzySet)
  + getName(): String
  + getFuzzySet(): FuzzySet
  + getMembership(double): double
}

class AbsoluteQuantifier {
  + AbsoluteQuantifier(String, FuzzySet)
}

class RelativeQuantifier {
  + RelativeQuantifier(String, FuzzySet)
}

class LinguisticVariable {
  - internalVariable: Variable
  - labels: Map<String, FuzzySet>
  + LinguisticVariable(String)
  + addLabel(String, FuzzySet): void
  + getAttributeName(): String
  + getLabelSet(String): FuzzySet
  + getLabels(): Set<String>
  + getLabelsMap(): Map<String, FuzzySet>
  + getInternalVariable(): Variable
}

class FuzzyStatement {
  - attributeName: String
  - label: String
  - fuzzySet: FuzzySet
  + FuzzyStatement(String, String, FuzzySet)
  + getAttributeName(): String
  + getLabel(): String
  + getFuzzySet(): FuzzySet
}

class LinguisticSummaryDTO {
  - summaryText: String
  - qualityMeasures: Map<Integer, Double>
  - overallScore: double
  + LinguisticSummaryDTO(String)
  + getSummaryText(): String
  + setMeasure(int, double): void
  + getMeasure(int): double
  + getQualityMeasures(): Map<Integer, Double>
  + getOverallScore(): double
  + setOverallScore(double): void
  + toString(): String
}

class OptimalSummaryOptimizer {
  + {static} optimize(List<LinguisticSummaryDTO>, Map<Integer, Double>): List<LinguisticSummaryDTO>
}

class QualityEvaluator {
  + {static} evaluateT1(List<DataEntity>, Quantifier, FuzzyStatement, List<FuzzyStatement>): double
  + {static} evaluateT1MultiForm1(List<DataEntity>, FuzzyStatement, FuzzyStatement, Quantifier, List<FuzzyStatement>): double
  + {static} evaluateT1MultiForm2(List<DataEntity>, FuzzyStatement, FuzzyStatement, Quantifier, FuzzyStatement, List<FuzzyStatement>): double
  + {static} evaluateT1MultiForm3(List<DataEntity>, FuzzyStatement, FuzzyStatement, List<FuzzyStatement>): double[]
  + {static} evaluateT1MultiForm4(List<DataEntity>, FuzzyStatement, FuzzyStatement, FuzzyStatement, List<FuzzyStatement>): double[]
  - {static} computeSubjectSummarizerRatio(List<DataEntity>, FuzzyStatement, FuzzyStatement, List<FuzzyStatement>): double
  + {static} evaluateT2(List<FuzzyStatement>): double
  + {static} evaluateT3(List<DataEntity>, FuzzyStatement, List<FuzzyStatement>): double
  + {static} evaluateT4(List<DataEntity>, FuzzyStatement, List<FuzzyStatement>): double
  + {static} evaluateT5(List<FuzzyStatement>): double
  + {static} evaluateT6(Quantifier): double
  + {static} evaluateT7(Quantifier): double
  + {static} evaluateT8(List<FuzzyStatement>): double
  + {static} evaluateT9(FuzzyStatement): double
  + {static} evaluateT10(FuzzyStatement): double
  + {static} evaluateT11(FuzzyStatement): double
  ~ {static} evaluateCombinedMembership(DataEntity, List<FuzzyStatement>): double
  ~ {static} evaluateSingleMembership(DataEntity, FuzzyStatement): double
  - {static} degreeOfImprecision(FuzzySet): double
  - {static} relativeCardinality(FuzzySet): double
}

class SummaryGenerator {
  + generateSingleSubject(List<DataEntity>, List<Quantifier>, List<FuzzyStatement>, List<FuzzyStatement>): List<LinguisticSummaryDTO>
  + generateMultiSubjectAll(List<DataEntity>, FuzzyStatement, FuzzyStatement, String, String, List<Quantifier>, List<FuzzyStatement>, List<FuzzyStatement>, boolean[]): List<LinguisticSummaryDTO>
  - fillCommonMeasures(LinguisticSummaryDTO, List<DataEntity>, Quantifier, FuzzyStatement, List<FuzzyStatement>): void
  - fillCommonMeasuresNoQuantifier(LinguisticSummaryDTO, List<DataEntity>, FuzzyStatement, List<FuzzyStatement>): void
  - buildSentence(String, FuzzyStatement, FuzzyStatement): String
  + {static} mapQuantifierName(String): String
  - mapAttributeName(String): String
}

class SubjectPartitioner {
  + {static} filter(List<DataEntity>, Predicate<DataEntity>): List<DataEntity>
  + {static} split(List<DataEntity>, Predicate<DataEntity>): List<List<DataEntity>>
}

AbsoluteQuantifier             -[#000082,plain]-^  Quantifier
RelativeQuantifier             -[#000082,plain]-^  Quantifier

GaussianMembershipFunction     -[#008200,dashed]-^  MembershipFunction
TrapezoidalMembershipFunction  -[#008200,dashed]-^  MembershipFunction
TriangularMembershipFunction   -[#008200,dashed]-^  MembershipFunction

FuzzySet               *--  ClassicSet              : universe
FuzzySet               *--  MembershipFunction      : membershipFunction
Quantifier             *--  FuzzySet                : fuzzySet
LinguisticVariable     o--  FuzzySet                : labels *

FuzzyStatement         *--  FuzzySet                : fuzzySet

SummaryGenerator       ..>  Quantifier              : «uses»
SummaryGenerator       ..>  FuzzyStatement          : «uses»
SummaryGenerator       ..>  LinguisticSummaryDTO    : «creates»
SummaryGenerator       ..>  QualityEvaluator        : «calls»
QualityEvaluator       ..>  Quantifier              : «uses»
QualityEvaluator       ..>  FuzzyStatement          : «uses»
QualityEvaluator       ..>  FuzzySet                : «uses»
OptimalSummaryOptimizer ..> LinguisticSummaryDTO    : «ranks»
QualityEvaluator -[hidden]down-> SubjectPartitioner
@enduml
